# fusion-altitude

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
benches/: altitude_benchmarks.rs
examples/: realistic_noise.rs  with_fusion_ahrs.rs
src/: altitude.rs  altitude_tests.rs  lib.rs  types.rs
