[package]
name = "fusion-altitude"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
authors = ["Wil Boayue <wil@wsbsolutions.com>"]
description = "A no_std altitude and vertical-velocity estimator. Fuses barometric pressure with gravity-compensated vertical acceleration via a 3-state complementary observer (altitude, vertical velocity, and accel-bias). Companion to fusion-ahrs."
readme = "README.md"
homepage = "https://github.com/wboayue/fusion-altitude/"
repository = "https://github.com/wboayue/fusion-altitude/"
documentation = "https://docs.rs/fusion-altitude"
license = "MIT"
keywords = ["altitude", "barometer", "sensor-fusion", "ahrs", "embedded"]
categories = ["embedded", "no-std", "algorithms", "science"]
exclude = ["CLAUDE.md"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
fusion-ahrs = "0.4"
nalgebra = "0.34"
rand = "0.10"
rand_pcg = "0.10"

[[bench]]
name = "altitude_benchmarks"
harness = false
